tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 18: layout qualifier 'origin_upper_left' is not permitted here
error: 18: layout qualifier 'push_constant' is not permitted here
error: 18: layout qualifier 'blend_support_all_equations' is not permitted here
error: 18: layout qualifier 'srgb_unpremul' is not permitted here
error: 18: layout qualifier 'key' is not permitted here
error: 18: layout qualifier 'location' is not permitted here
error: 18: layout qualifier 'offset' is not permitted here
error: 18: layout qualifier 'binding' is not permitted here
error: 18: layout qualifier 'index' is not permitted here
error: 18: layout qualifier 'set' is not permitted here
error: 18: layout qualifier 'builtin' is not permitted here
error: 18: layout qualifier 'input_attachment_index' is not permitted here
error: 18: layout qualifier 'max_vertices' is not permitted here
error: 18: layout qualifier 'invocations' is not permitted here
error: 18: layout qualifier 'when' is not permitted here
error: 18: layout qualifier 'ctype' is not permitted here
error: 37: layout qualifier 'origin_upper_left' is not permitted here
error: 37: layout qualifier 'push_constant' is not permitted here
error: 37: layout qualifier 'blend_support_all_equations' is not permitted here
error: 37: layout qualifier 'srgb_unpremul' is not permitted here
error: 37: layout qualifier 'key' is not permitted here
error: 37: layout qualifier 'location' is not permitted here
error: 37: layout qualifier 'offset' is not permitted here
error: 37: layout qualifier 'binding' is not permitted here
error: 37: layout qualifier 'index' is not permitted here
error: 37: layout qualifier 'set' is not permitted here
error: 37: layout qualifier 'builtin' is not permitted here
error: 37: layout qualifier 'input_attachment_index' is not permitted here
error: 37: layout qualifier 'max_vertices' is not permitted here
error: 37: layout qualifier 'invocations' is not permitted here
error: 37: layout qualifier 'when' is not permitted here
error: 37: layout qualifier 'ctype' is not permitted here
32 errors
